# CapCutAPI-Complete

./: .dockerignore  .env.example  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT-SIMPLE.md  DEPLOYMENT.md  Dockerfile  FUNCTION_OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_DEPLOYMENT.md  README.md  README_ENHANCED.md  SECURITY.md  add_audio_track.py  add_effects.py  add_stickers.py  add_text.py  add_video_track.py  audio_utils.py  capcut_api.py  capcut_server.py  config.json.example  config.py  create_draft.py  deploy-linux.sh  deploy-windows.bat  docker-compose-simple.yml  docker-compose.yml  docker-start.bat  docker-start.sh  enhanced_server.py  image_utils.py  mcp_server.py  media_processor.py  minimal_server.py  nginx.conf  optimized_capcut_server.py  optimized_create_draft.py  optimized_media_handler.py  optimized_requirements.txt  (+19 more)
.github/workflows/: ci.yml
config/: optimization.json
k8s/: deployment.yaml
optimized_modules/: async_media_processor.py  cache_optimizer.py  intelligent_cache.py  main_integration.py  optimization_manager.py  performance_api.py  performance_middleware.py  performance_monitor.py  resource_scheduler.py
pyJianYingDraft/: __init__.py
scripts/: validate_project.py
settings/: local.py
tests/: __init__.py
tests/unit/: test_config.py  test_server.py
